examples/bad-files-examples/parse-errors/fileWithParseErrors.wlk
// the actual file doesnt matter since it isnt actually built (stubbed)